# saab

./: .gitignore  README.md  pyproject.toml
IMPLEMENTATION/: PREPROCESS.md
PLAN/: MODELS.md  NOTE_RANKING.md  PREPROCESS.md  TASKS.md
experiments/configs/: README.md  model_default.yaml  saab_experiment.yaml  training_default.yaml
logs/test_experiment/: metrics.jsonl
notebooks/: saab.ipynb
saab_v3/: evaluate.py  train.py  verify.py
saab_v3/config/: __init__.py  base.py  loader.py
saab_v3/data/: __init__.py  batcher.py  constants.py  saab_utils.py  structures.py  tag_encoder.py  tokenizer.py  vocabulary.py
saab_v3/models/: __init__.py  base_transformer.py  config.py  factory.py  flat_transformer.py  saab_transformer.py  scratch_transformer.py
saab_v3/tasks/: __init__.py  base.py  classification.py  config.py  config_schema.py  factory.py  msm_field.py  pooling.py  ranking.py  regression.py  token_classification.py
saab_v3/training/: __init__.py  checkpoint.py  config.py  dataloader.py  dataset.py  diagnostics.py  evaluator.py  loss.py  metrics.py  preprocessor.py  run_identity.py  schedulers.py  trainer.py
saab_v3/utils/: __init__.py  device.py
specs/: __init__.py  conftest.py
specs/config/: __init__.py  spec_base_config.py
specs/data/: __init__.py  conftest.py  spec_batcher.py  spec_batcher_saab.py  spec_graph_extractor.py  spec_json_extractor.py  spec_saab_utils.py  spec_structures.py  spec_table_extractor.py  spec_tag_encoder.py  spec_tokenizer.py  spec_vocabulary.py
specs/models/: __init__.py  conftest.py  spec_attention.py  spec_config.py  (+12 more)
(+70 files in other folders)
