[project]
name = "saab_v3"
version = "0.1.0"
description = ""
authors = [
    {name = "mira-bau",email = "amira.benamara@bahcesehir.edu.tr"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
matplotlib = "^3.10.8"

[tool.pytest.ini_options]
python_files = ["spec_*.py", "test_*.py"]
python_functions = ["spec_*", "test_*"]
python_classes = ["Spec*", "Test*"]
testpaths = ["specs"]

